--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
     font-family: "Raleway", serif !important;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: #99A799;
+    background-color: #263341
 }
 
 .about-card {
