--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -6,7 +6,7 @@
 }
 
 .navbar {
-    background-color: #171d23;
+    background-color: #202f3d;
     text-align: left;
     width: 100%;
     position: sticky;
