--- a/src/components/Cards/CardItem.css
+++ b/src/components/Cards/CardItem.css
@@ -15,7 +15,8 @@
     display: flex;
     flex-direction: column;
     transition: 0.2s ease;
-    border: none;
+    border:none;
+    box-shadow: 2px 5px #2b9cad !important;
     z-index: 1;
     position: relative;
     top: 0;
