--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #263238;
+    background-color: #202f3d;
     width: 100%;
     position: absolute;
     bottom: 0 !important;
